--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,10 +1,13 @@
 .footer{
     text-align: center;
-    margin: 10px;
+    align-items: center;
+    position: relative;
+    bottom: 130px;
+    left: 100px;
 }
 
-@media screen and (min-width: 600px){
+@media screen and (max-width: 600px){
     .footer{
-      padding-left:400px;
+    padding-right: 200px;
     }
 }
